# BikeRecorder

./: README.md
docs/: product_spec.md
mobile/: App.tsx  app.json  package.json
server/: pyproject.toml
server/app/: auth.py  config.py  database.py  main.py  models.py  schemas.py  security.py
server/app/routers/: __init__.py  auth.py  devices.py  files.py  segments.py  trips.py  uploads.py  users.py
server/app/services/: storage.py
server/tests/: test_api.py
